# schoolmemories

./: .envrc.example  .gitignore  LICENSE  README.md  manage.py  overwrite-database.sh  pyproject.toml
.github/workflows/: check.yml  deploy.yml
ansible/: .envrc.example  Caddyfile.j2  dukkha.caddy.j2  dukkha.service.j2  inventory.yaml  playbook.yaml  schoolmemories.service.j2  vars.yaml
dukkha/: asgi.py  settings.py  urls.py  wsgi.py
main/: admin.py  country.py  forms.py  middleware.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_page.py  0003_alter_user_email.py  0004_rename_title_user_website_title.py  0005_user_custom_domain.py  0006_user_home_page.py  0007_remove_user_home_page_user_home.py  0008_user_custom_css.py  0009_alter_user_custom_css.py  0010_image.py  0011_user_contact.py  0012_alter_user_contact.py  0013_memory.py  0014_remove_user_home.py  0015_alter_page_unique_together_remove_image_user_and_more.py  0016_remove_user_website_title.py  0017_user_landing_body.py  0018_remove_user_custom_css_remove_user_landing_body.py  0019_sitesettings.py  0020_alter_sitesettings_options.py  0021_sitesettings_privacy_policy_and_more.py  0022_alter_memory_gender.py  0023_alter_memory_options.py  0024_alter_memory_gender.py  0025_memory_ethicity.py  0026_rename_ethicity_memory_ethnicity.py  0027_alter_memory_school_grade_alter_memory_school_type.py  0028_alter_memory_school_type.py  0029_alter_memory_school_type.py  0030_memory_school_type_other.py  0031_memory_memory_themes.py  0032_alter_memory_memory_themes.py  0033_alter_memory_memory_themes.py  0034_memory_custom_themes.py  (+11 more)
schoolmemories/: asgi.py  settings.py  urls.py  wsgi.py
(+36 files in other folders)
