[project]
name = "dukkha"
version = "0.1.0"
description = "complex software is suffering"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.1",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"] # line too long
