[project]
name = "schoolmemories"
version = "0.1.0"
description = "memories of school"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "mistune>=3.0.2",
    "psycopg2>=2.9.10",
]

[tool.uv]
dev-dependencies = [
    "ansible>=10.4.0",
    "djade>=1.3.2",
    "ruff>=0.8.4",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"] # line too long
